--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
 		<meta content="#000000" name="theme-color"/>
 		<meta content="Web site created using create-react-app" name="description"/>
 		<!--		<link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>-->
-		<link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
+<!--		<link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>-->
 		<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,500,600,700,800" rel="stylesheet">
 		
 <!--		<link rel="preconnect" href="https://fonts.googleapis.com">-->
